fixed scrollbars on chrome; added tdd C++

--- a/_sass/_qwan-overrides.scss
+++ b/_sass/_qwan-overrides.scss
@@ -72,7 +72,6 @@ em {
     margin: 0 0.5em;
   }
   .post {
-    overflow: scroll;
     font-size: 120%;
     ul {
       margin-bottom: 0.7em;
